// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TrainingForm/> should edit the training 1`] = `
<div>
  <form
    action="#"
    data-testid="training-form-form"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-justify-xs-flex-end"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          data-testid="training-form-name"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-28 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
            data-shrink="true"
          >
            Enter training name
          </label>
          <div
            class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-27 makeStyles-filledRoot-29 MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiFilledInput-input"
              name="label"
              type="text"
              value="Training label"
            />
          </div>
        </div>
        <div
          class="MuiCollapse-container MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained"
                data-testid="common-elementary-form-input-helperText"
              >
                <span>
                  ​
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiBox-root MuiBox-root-39 makeStyles-wrapper-33 MuiGrid-container MuiGrid-spacing-xs-1"
          data-rbd-droppable-context-id="2"
          data-rbd-droppable-id="media-list"
        >
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-346 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="d7a11f43-9157-5859-80f8-4c1fbdb8d78f"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="d7a11f43-9157-5859-80f8-4c1fbdb8d78f"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-350 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-347"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-349"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-348 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Cuh wit janufizo usa hi mafob ebma giskoupe zol eg demjo cef mo erdeko cudpiv.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-351 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="d4afac19-e8d3-562d-bde6-1d1cac90adf5"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="d4afac19-e8d3-562d-bde6-1d1cac90adf5"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-355 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-352"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-354"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-353 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Oke kad iku ez ime kuere cigom luze zakef ac aconki kekefjud voswulun kepdub optiowa.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-356 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="bde96481-f7db-5f20-8b2c-86dcee377e54"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="bde96481-f7db-5f20-8b2c-86dcee377e54"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-360 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-357"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-359"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-358 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Vejelav ki rem reput fih buwolah jek locohgiz setoeta unitez tafuzemo ras roru ri kadav mezwap.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-361 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="1e974d9a-41c9-50a0-a2b7-e56c24c5a433"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="1e974d9a-41c9-50a0-a2b7-e56c24c5a433"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-365 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-362"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-364"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-363 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Kozbuno lipolam we ovopu mofasmev ruci modkurne he tifufig em jucjana ka ow bago rombadki hidoc.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-366 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="2e56e1fd-02d3-5726-a5eb-5a761b2d80d0"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="2e56e1fd-02d3-5726-a5eb-5a761b2d80d0"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-370 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-367"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-369"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-368 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Hikpeuku wez vojsuf hatu mejci wujuvuz kados ufa rutaw nid madbik canida ritne kug jorwi hiwagna nomgitab jadu.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-371 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="9205d8f1-b10d-5526-916d-613e53c8386e"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="9205d8f1-b10d-5526-916d-613e53c8386e"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-375 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-372"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-374"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-373 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Biflo icbiil zapiw ugipo duwfo du bac canpanzav ico cuvaksos era be keopi.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-376 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="91ac0cbd-b502-52bc-a03f-f0e22f240930"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="91ac0cbd-b502-52bc-a03f-f0e22f240930"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-380 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-377"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-379"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-378 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Ev viglurupi sogdag pewo piec jel sihil im hisrok he joziha suikefu mewo fiw azecejiho sosoar.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-381 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="af5ff21a-4ccd-5332-b1e8-86bc89dacd2c"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="af5ff21a-4ccd-5332-b1e8-86bc89dacd2c"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-385 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-382"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-384"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-383 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Zemore kitop ucvewa de lamhekab hag ila ilulifnu udowep fepusbuh jeef lonjupif ve ho.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-386 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="18b39488-1855-53a4-b840-db4409b11e6c"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="18b39488-1855-53a4-b840-db4409b11e6c"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-390 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-387"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-389"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-388 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Ge so azebewo jocufci nise ci pi go mom poozgu anluduh tanfotumo dak lo ucu vamed.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-391 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="e4609281-fb81-5a5b-9cb7-b62c86d76de5"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="e4609281-fb81-5a5b-9cb7-b62c86d76de5"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-395 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-392"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-394"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-393 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Ripiv pusdouk na zugi ji golve vignod fah ilo sufka ov osa cek zo.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-396 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="006bbe9b-bfb0-594a-a833-9800997ae493"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="006bbe9b-bfb0-594a-a833-9800997ae493"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-400 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-397"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-399"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-398 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Becakanij nepav tud fokrigso hatuzeesa jeliw ifkor da wicualo gerbu ike liginjup ikpabdec ci ijovuroz ka suculev.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-401 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="0c518a68-ab4d-5e67-97dd-c7afb098c415"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="0c518a68-ab4d-5e67-97dd-c7afb098c415"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-405 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-402"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-404"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-403 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Izuesetu munuviw onozon dafadcac gusugid izajolec fonil buunho tihdinho buksak hudfunler ub matvait sukucul ez atifi sig gi.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-406 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="ae90b9f0-638d-58df-9199-41599fea4b4b"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="ae90b9f0-638d-58df-9199-41599fea4b4b"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-410 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-407"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-409"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-408 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Fo je ke nupri nidijpoj fesbokso bog mogolu as gabzas ohju tavruni fomdeeb.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-411 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="d29fa95b-18c6-55b4-ab95-8b7d74a644b9"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="d29fa95b-18c6-55b4-ab95-8b7d74a644b9"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-415 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-412"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-414"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-413 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Nemefu gi ta aci guewocuz cuz ba ah ilgufim irli vo kejzi idde visevatak ju su.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-416 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="0c9fbb51-635b-54e2-b9ef-42717bddd33e"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="0c9fbb51-635b-54e2-b9ef-42717bddd33e"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-420 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-417"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-419"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-418 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Ho ubababe pefuw do ralanra nepcogoz dalviku gidasir ilhe ter valih mug jop sop sawucva sag oz lilzulbad.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-421 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="3d308cf8-bc64-5a5a-8609-155c8bd73a0d"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="3d308cf8-bc64-5a5a-8609-155c8bd73a0d"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-425 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-422"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-424"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-423 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Muverisar ala for hapkav duppido humhi mudzo fadjugku nuwsik mi cebma en jirlemih vaudman cunwaka baparpis sa nobal.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-426 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="39bb6138-a6cb-50db-bf51-6429a68795f3"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="39bb6138-a6cb-50db-bf51-6429a68795f3"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-430 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-427"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-429"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-428 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Nowbok si ja gewguh zofep oha pohij diso sakoho lip jir benbes.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-431 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="16c3b87d-7a8c-515b-9ece-4eab80b4c553"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="16c3b87d-7a8c-515b-9ece-4eab80b4c553"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-435 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-432"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-434"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-433 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Ogi miwouc lerepnu kuv zo mubah fanuzva da ojaepfej fe po tu tatco pavava cosobin mi ajletu.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-436 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="3b260e7e-6aec-5d46-8dcb-0f73ad5b48e2"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="3b260e7e-6aec-5d46-8dcb-0f73ad5b48e2"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-440 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-437"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-439"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-438 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Zahik lu fuajadin bo wo ehteke da samma he oruwe rervamte fafnujnez.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-441 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="c2114bdf-8bdd-524b-afef-40e33c2a438d"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="c2114bdf-8bdd-524b-afef-40e33c2a438d"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-445 MuiListItem-root makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-442"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-444"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-443 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Tajomu ircimod taisu ovono jojovoju dejbej fa sut jiifla kuvje hi bi torogop jopa jejissaw calu.
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5"
        >
          Add video
        </h5>
        <div />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          class="MuiButtonBase-root MuiButton-root makeStyles-root-34 makeStyles-root-37 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation"
          tabindex="0"
          type="submit"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="makeStyles-inner-35 makeStyles-inner-38"
              data-testid="common-elementary-button-children"
              style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              Save training
            </span>
            <div
              class="makeStyles-loader-36"
              data-testid="common-elementary-button-loader"
              style="opacity: 0; visibility: hidden;"
            >
              <div
                class="css-0"
              >
                <div
                  class="css-1ab95gp"
                />
                <div
                  class="css-tm4xur"
                />
                <div
                  class="css-1epl0i6"
                />
                <div
                  class="css-1fj2adh"
                />
                <div
                  class="css-1vivfwt"
                />
              </div>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<TrainingForm/> should render 1`] = `
<div>
  <form
    action="#"
    data-testid="training-form-form"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-justify-xs-flex-end"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          data-testid="training-form-name"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-2 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
            data-shrink="false"
          >
            Enter training name
          </label>
          <div
            class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-1 makeStyles-filledRoot-3 MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiFilledInput-input"
              name="label"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="MuiCollapse-container MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained"
                data-testid="common-elementary-form-input-helperText"
              >
                <span>
                  ​
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiBox-root MuiBox-root-13 makeStyles-wrapper-7 MuiGrid-container MuiGrid-spacing-xs-1"
          data-rbd-droppable-context-id="0"
          data-rbd-droppable-id="media-list"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5"
        >
          Add video
        </h5>
        <div />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          class="MuiButtonBase-root MuiButton-root makeStyles-root-8 makeStyles-root-11 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation"
          tabindex="0"
          type="submit"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="makeStyles-inner-9 makeStyles-inner-12"
              data-testid="common-elementary-button-children"
              style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              Save training
            </span>
            <div
              class="makeStyles-loader-10"
              data-testid="common-elementary-button-loader"
              style="opacity: 0; visibility: hidden;"
            >
              <div
                class="css-0"
              >
                <div
                  class="css-1ab95gp"
                />
                <div
                  class="css-tm4xur"
                />
                <div
                  class="css-1epl0i6"
                />
                <div
                  class="css-1fj2adh"
                />
                <div
                  class="css-1vivfwt"
                />
              </div>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<TrainingForm/> should submit only with label provided 1`] = `
<div>
  <form
    action="#"
    data-testid="training-form-form"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-justify-xs-flex-end"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          data-testid="training-form-name"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-15 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
            data-shrink="true"
          >
            Enter training name
          </label>
          <div
            class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-14 makeStyles-filledRoot-16 MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiFilledInput-input"
              name="label"
              type="text"
              value="Training label"
            />
          </div>
        </div>
        <div
          class="MuiCollapse-container"
          style="min-height: 0px; height: 0px; transition-duration: 300ms;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained"
                data-testid="common-elementary-form-input-helperText"
              >
                <span>
                  ​
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiBox-root MuiBox-root-26 makeStyles-wrapper-20 MuiGrid-container MuiGrid-spacing-xs-1"
          data-rbd-droppable-context-id="1"
          data-rbd-droppable-id="media-list"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5"
        >
          Add video
        </h5>
        <div />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          class="MuiButtonBase-root MuiButton-root makeStyles-root-21 makeStyles-root-24 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation"
          tabindex="0"
          type="submit"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="makeStyles-inner-22 makeStyles-inner-25"
              data-testid="common-elementary-button-children"
              style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              Save training
            </span>
            <div
              class="makeStyles-loader-23"
              data-testid="common-elementary-button-loader"
              style="opacity: 0; visibility: hidden;"
            >
              <div
                class="css-0"
              >
                <div
                  class="css-1ab95gp"
                />
                <div
                  class="css-tm4xur"
                />
                <div
                  class="css-1epl0i6"
                />
                <div
                  class="css-1fj2adh"
                />
                <div
                  class="css-1vivfwt"
                />
              </div>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</div>
`;
